Handle the case where the v8 scriptable object has a property defined with value undefined.

Or with a getter that returns undefined.

Indeed V8HTMLPlugInElementCustom::getScriptableObjectProperty should only
fallback to the general HTMLObjectElement if a property does not exist.

For example if the v8 scriptable object has some properties
defined as equivalent as the following:

Object.defineProperty(
  scriptableObj,
  "onFoo",
  {
    value: undefined // default
  }
);

or

Object.defineProperty(
  scriptableObj,
  "bar",
  {
    get: function () { return undefined; }
  }
);

Then myHTMLObjectElement.hasOwnProperty("onFoo") or
myHTMLObjectElement.hasOwnProperty("bar") will return
false whereas they should return true.

BUG=596495

R=bashi@chromium.org, dcheng@chromium.org, haraken@chromium.org, piman@chromium.org

Review URL: https://codereview.chromium.org/1813823002

Cr-Commit-Position: refs/heads/master@{#383296}

Former-commit-id: 9e08bcbbb080114780f7d37ff4d9f3946e59d651